# novel-supercoder

./: .gitignore  NOTES.md  README.md  interp.ipynb  pyproject.toml
approach2/data/: README.md  build_dataframe.py  setup.sh  to_hf_dataset.py
approach2/data/codenet_c_dataset/: dataset_info.json  state.json
data/: viewer.ipynb
old-approaches/data/: viewer.ipynb
old-approaches/novel_supercoder/: 2-generate-w-base.py  3-benchmark.py
old-approaches/old-gen-optimize-assembly/: README.md
old-approaches/old-gen-optimize-assembly/src/: 1-build_codeforces_dataframe.py
old-gen-optimize-assembly/src/: 2-generate_assembly.py  3-split-dataset.py  5-RL.py  5-score-local.py
old-gen-optimize-assembly/src/manual-run/: main.c  two_sum_O0.s
old-gen-optimize-assembly/src/testing-notebooks/: main.ipynb
sft/: README.md  main.ipynb
src/: 5-generate-candidates.py  experiments.ipynb  wide.csv
src/LLM-experiment/example1/: inputC.c  input_tests.json  inputo3.s
src/LLM-experiment/example2/: inputC.c  (+1 more)
src/benchmark/: main.ipynb
src/codeforces-approach/: 4-sft.py  5-RL.py  5-generate-candidates.py  5-score-local.py  6-scorer.py  build_codeforces_dataframe.py  generate_assembly.py
src/data/: README.md  filter.py
src/data-inspection/: analyze_codenet.py  export_problem_tests.py  random.ipynb
src/experiments/: codenet_random_5.csv
src/manual-llm/: README.md
src/manual-run/: o0.s
src/novel_supercoder/: 1-build_codeforces_cpp_dataset.py  2-generate-w-base.py  3-benchmark.py  __init__.py  build_codeforces_cpp_dataset.py
src/sft/: random_tests.ipynb  testing.ipynb
(+341 files in other folders)
