[project]
name = "gen-optimize-assembly"
version = "0.1.0"
description = "LLM experiments for assembly optimization (SFT, notebooks)"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "modal>=1.4.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
