[project]
name = "novel-supercoder"
version = "0.1.0"
description = "Codeforces C++ dataset: official tests, solutions, g++ -O0..-O3 assembly"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
]

[project.scripts]
build-cpp-dataset = "novel_supercoder.build_codeforces_cpp_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novel_supercoder"]
