[project]
name = "novel-supercoder"
version = "0.1.0"
description = "CodeNet accepted-C dataset tools: data pipeline, experiments, RL"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "pandas",
    "pyarrow",
]

[project.scripts]
analyze-codenet = "experiments.analyze_codenet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiments", "src/data"]
